force-app/main/default/objects/Case/fields/Able_to_work_in_English__c.field-meta.xml
<CustomField>
    <fullName>Able_to_work_in_English__c</fullName>
    <label>Able to work in English</label>
    <length>255</length>
    <type>Text</type>
</CustomField>