force-app/main/default/objects/Case/fields/Accessories_Laptop__c.field-meta.xml
<CustomField>
    <fullName>Accessories_Laptop__c</fullName>
    <inlineHelpText>Do you systematically provide accessories that are compatible with all your MacBook/PCs?</inlineHelpText>
    <label>Accessories - Laptop</label>
    <type>TextArea</type>
</CustomField>