force-app/main/default/objects/Case/fields/Accessories_Smartphone__c.field-meta.xml
<CustomField>
    <fullName>Accessories_Smartphone__c</fullName>
    <inlineHelpText>Do you systematically provide accessories that are compatible with all your smartphones?</inlineHelpText>
    <label>Accessories - Smartphone</label>
    <type>TextArea</type>
</CustomField>