force-app/main/default/objects/Case/fields/Accessories_Tablet__c.field-meta.xml
<CustomField>
    <fullName>Accessories_Tablet__c</fullName>
    <inlineHelpText>Do you systematically provide accessories that are compatible with all your tablets?</inlineHelpText>
    <label>Accessories - Tablet</label>
    <type>TextArea</type>
</CustomField>