force-app/main/default/objects/Case/fields/Action_in_the_BO_Avoir__c.field-meta.xml
<CustomField>
    <fullName>Action_in_the_BO_Avoir__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box you did an avoir to your merchant</inlineHelpText>
    <label>Action in the BO : Avoir</label>
    <type>Checkbox</type>
</CustomField>