force-app/main/default/objects/Case/fields/Action_in_the_BO_Customer_Request__c.field-meta.xml
<CustomField>
    <fullName>Action_in_the_BO_Customer_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box if you did a customer request</inlineHelpText>
    <label>Action in the BO : Customer Request</label>
    <type>Checkbox</type>
</CustomField>