force-app/main/default/objects/Case/fields/Action_plan_details_of_action_and_ETA__c.field-meta.xml
<CustomField>
    <fullName>Action_plan_details_of_action_and_ETA__c</fullName>
    <label>Action plan (details of action and ETA)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>