force-app/main/default/objects/Case/fields/Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details__c</fullName>
    <label>Additional Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refund proceeded whereas there is a warranty exclusion</fullName>
            </value>
            <value>
                <fullName>The order was refunded and shouldn&apos;t have been</fullName>
            </value>
            <value>
                <fullName>Refund at your expense of a commercial gesture</fullName>
            </value>
            <value>
                <fullName>Refund at your expense of shipping/delivery costs</fullName>
            </value>
            <value>
                <fullName>Refund at your expense of repair costs</fullName>
            </value>
            <value>
                <fullName>I need to help manage BackCare request</fullName>
            </value>
            <value>
                <fullName>BackCare is not managing my case properly / taking into account my feedback</fullName>
            </value>
            <value>
                <fullName>I need help to manage a warranty exclusion</fullName>
            </value>
            <value>
                <fullName>I am not able to provide a proof of refund to the customer</fullName>
            </value>
            <value>
                <fullName>I don&apos;t know how to manage one of my after-sales requests</fullName>
            </value>
            <value>
                <fullName>Back Market is not applying the correct procedure</fullName>
            </value>
            <value>
                <fullName>I need to open a FBBM carrier investigation / I have an issue with a FBBM delivery</fullName>
            </value>
            <value>
                <fullName>I need help on a specific order</fullName>
            </value>
            <value>
                <fullName>Billing request related to the service</fullName>
            </value>
            <value>
                <fullName>I want to subscribe</fullName>
            </value>
            <value>
                <fullName>My request concerns something else</fullName>
            </value>
            <value>
                <fullName>I&apos;m facing issues to create a return/shipment label or to arrange a pick up</fullName>
            </value>
            <value>
                <fullName>I need to open / update a BackShip carrier investigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>