force-app/main/default/objects/Case/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <label>Additional Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical Damage</fullName>
            </value>
            <value>
                <fullName>Internal Damage</fullName>
            </value>
            <value>
                <fullName>Oxidation</fullName>
            </value>
            <value>
                <fullName>The product has been opened by the third party</fullName>
            </value>
            <value>
                <fullName>Product lost - The customer didn&apos;t receive the parcel</fullName>
            </value>
            <value>
                <fullName>Product lost - I (seller) didn&apos;t receive the return</fullName>
            </value>
            <value>
                <fullName>Product damaged - Received by a customer</fullName>
            </value>
            <value>
                <fullName>Product damaged - Received by me (seller)</fullName>
            </value>
            <value>
                <fullName>Product was stolen - The customer didn&apos;t receive the parcel</fullName>
            </value>
            <value>
                <fullName>Product was stolen - I (seller) didn&apos;t receive the parcel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>