force-app/main/default/objects/Case/fields/After_sales_management_crew__c.field-meta.xml
<CustomField>
    <fullName>After_sales_management_crew__c</fullName>
    <label>After-sales management crew</label>
    <type>TextArea</type>
</CustomField>