force-app/main/default/objects/Case/fields/Already_selling_in__c.field-meta.xml
<CustomField>
    <fullName>Already_selling_in__c</fullName>
    <label>Already selling in</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>