force-app/main/default/objects/Case/fields/Amount_for_partial_refund__c.field-meta.xml
<CustomField>
    <fullName>Amount_for_partial_refund__c</fullName>
    <label>Amount for partial refund</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>