force-app/main/default/objects/Case/fields/Assigned_to_me__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_me__c</fullName>
    <formula>if( Owner:User.Id =  $User.Id , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to me</label>
    <type>Checkbox</type>
</CustomField>