force-app/main/default/objects/Case/fields/Avoir_ID__c.field-meta.xml
<CustomField>
    <fullName>Avoir_ID__c</fullName>
    <label>Avoir ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>