force-app/main/default/objects/Case/fields/Battery_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Battery_Capacity__c</fullName>
    <inlineHelpText>What is the minimum battery capacity of a product sold on Back Market?</inlineHelpText>
    <label>Battery Capacity</label>
    <type>TextArea</type>
</CustomField>