force-app/main/default/objects/Case/fields/Bill_Relaunched__c.field-meta.xml
<CustomField>
    <fullName>Bill_Relaunched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill Relaunched</label>
    <type>Checkbox</type>
</CustomField>