force-app/main/default/objects/Case/fields/Bill_Sent__c.field-meta.xml
<CustomField>
    <fullName>Bill_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill Sent</label>
    <type>Checkbox</type>
</CustomField>