force-app/main/default/objects/Case/fields/Bill_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Sent_Date__c</fullName>
    <label>Bill Sent Date</label>
    <type>Date</type>
</CustomField>