force-app/main/default/objects/Case/fields/Bill_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Bill_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill Uploaded</label>
    <type>Checkbox</type>
</CustomField>