force-app/main/default/objects/Case/fields/Bill_Uploaded_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Uploaded_Date__c</fullName>
    <label>Bill Uploaded Date</label>
    <type>Date</type>
</CustomField>