force-app/main/default/objects/Case/fields/BO_Positioning__c.field-meta.xml
<CustomField>
    <fullName>BO_Positioning__c</fullName>
    <inlineHelpText>Pour se positionner sur un smartphone ou une tablette, je clique sur le bouton &quot;Créer une annonce&quot; de l&apos;onglet &quot;Annonces&quot;</inlineHelpText>
    <label>BO - Positioning Smartphones/Tablets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>