force-app/main/default/objects/Case/fields/BO_Positioning_Diversification__c.field-meta.xml
<CustomField>
    <fullName>BO_Positioning_Diversification__c</fullName>
    <inlineHelpText>Je clique sur l&apos;onglet &quot;Annonces&quot; (1) pour me positionner sur les smartphones et les tablettes et l&apos;onglet &quot;Opportunités&quot; (2) pour les autres catégories.</inlineHelpText>
    <label>BO - Positioning Diversification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>