force-app/main/default/objects/Case/fields/Brands_sold__c.field-meta.xml
<CustomField>
    <fullName>Brands_sold__c</fullName>
    <label>Brands sold</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>