force-app/main/default/objects/Case/fields/Business_potential__c.field-meta.xml
<CustomField>
    <fullName>Business_potential__c</fullName>
    <label>Business potential</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>