force-app/main/default/objects/Case/fields/Buyback_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Catalog__c</fullName>
    <label>Buyback Catalog</label>
    <type>TextArea</type>
</CustomField>