force-app/main/default/objects/Case/fields/Buyback_Grades__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Grades__c</fullName>
    <label>Buyback Grades</label>
    <type>TextArea</type>
</CustomField>