force-app/main/default/objects/Case/fields/BuyBack_Live__c.field-meta.xml
<CustomField>
    <fullName>BuyBack_Live__c</fullName>
    <formula>Account.Buyback__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BuyBack Live</label>
    <type>Checkbox</type>
</CustomField>