force-app/main/default/objects/Case/fields/Buyback_Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Payment_Methods__c</fullName>
    <label>Buyback Payment Methods</label>
    <type>TextArea</type>
</CustomField>