force-app/main/default/objects/Case/fields/BuyBack_Stage__c.field-meta.xml
<CustomField>
    <fullName>BuyBack_Stage__c</fullName>
    <formula>TEXT(Account.Stage_Buyback__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BuyBack Stage</label>
    <type>Text</type>
</CustomField>