force-app/main/default/objects/Case/fields/Buybox_3_Actions__c.field-meta.xml
<CustomField>
    <fullName>Buybox_3_Actions__c</fullName>
    <inlineHelpText>What are the 3 measures that you can take to access the Buybox?</inlineHelpText>
    <label>Buybox - 3 Actions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>