force-app/main/default/objects/Case/fields/Buybox_Not_having_it__c.field-meta.xml
<CustomField>
    <fullName>Buybox_Not_having_it__c</fullName>
    <inlineHelpText>What does it mean to not have the &quot;BUYBOX&quot;?</inlineHelpText>
    <label>Buybox - Not having it</label>
    <length>255</length>
    <type>Text</type>
</CustomField>