force-app/main/default/objects/Case/fields/BWcase__c.field-meta.xml
<CustomField>
    <fullName>BWcase__c</fullName>
    <formula>if(   Case_Owner_Team__c = &quot;Back Watch E.U.&quot; , &quot;yes&quot;, &quot;no&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BWcase</label>
    <type>Text</type>
</CustomField>