force-app/main/default/objects/Case/fields/BypassVR__c.field-meta.xml
<CustomField>
    <fullName>BypassVR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassVR</label>
    <type>Checkbox</type>
</CustomField>