force-app/main/default/objects/Case/fields/Carrier_compatibility__c.field-meta.xml
<CustomField>
    <fullName>Carrier_compatibility__c</fullName>
    <inlineHelpText>To sell devices able to connect to the network on Back Market, it is required that you provide all the details to enable Back Market to display an accurate carrier compatibility.</inlineHelpText>
    <label>Carrier compatibilty</label>
    <type>TextArea</type>
</CustomField>