force-app/main/default/objects/Case/fields/Carrier_Investigation_Details__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Investigation_Details__c</fullName>
    <label>Carrier Investigation Details</label>
    <length>50</length>
    <type>Text</type>
</CustomField>