force-app/main/default/objects/Case/fields/Carrier_Investigation_Drive__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Investigation_Drive__c</fullName>
    <label>Carrier Investigation Drive</label>
    <type>Url</type>
</CustomField>