force-app/main/default/objects/Case/fields/Carrier_Investigation_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Investigation_Outcome__c</fullName>
    <label>Carrier Investigation Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, all documents provided</fullName>
            </value>
            <value>
                <fullName>No, missing documents</fullName>
            </value>
            <value>
                <fullName>Investigation not needed anymore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>