force-app/main/default/objects/Case/fields/Carries__c.field-meta.xml
<CustomField>
    <fullName>Carries__c</fullName>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Carrier</valueSetName>
    </valueSet>
</CustomField>