force-app/main/default/objects/Case/fields/Case_assigned_to_my_user__c.field-meta.xml
<CustomField>
    <fullName>Case_assigned_to_my_user__c</fullName>
    <formula>if ( Owner:User.Id =  $User.Id , True, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case assigned to my user</label>
    <type>Checkbox</type>
</CustomField>