force-app/main/default/objects/Case/fields/Case_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Case_Deadline__c</fullName>
    <label>Case Deadline</label>
    <type>DateTime</type>
</CustomField>