force-app/main/default/objects/Case/fields/Case_Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Team__c</fullName>
    <formula>text(Owner:User.Team__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Team</label>
    <type>Text</type>
</CustomField>