force-app/main/default/objects/Case/fields/Case_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason_Details__c</fullName>
    <label>Case Reason Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <restricted>true</restricted>
        <valueSetName>Challenging_points</valueSetName>
    </valueSet>
</CustomField>