force-app/main/default/objects/Case/fields/Catalog_change_operation__c.field-meta.xml
<CustomField>
    <fullName>Catalog_change_operation__c</fullName>
    <label>Catalog change operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Duplicated Product</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other wrong info</fullName>
            </value>
            <value>
                <fullName>Product Creation</fullName>
            </value>
            <value>
                <fullName>To Be Blacklisted</fullName>
            </value>
            <value>
                <fullName>Training needed</fullName>
            </value>
            <value>
                <fullName>Translation Error</fullName>
            </value>
            <value>
                <fullName>Validation Issue</fullName>
            </value>
            <value>
                <fullName>Wrong attribute</fullName>
            </value>
            <value>
                <fullName>Wrong image</fullName>
            </value>
            <value>
                <fullName>Wrong price new</fullName>
            </value>
            <value>
                <fullName>Wrong Rematch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>