force-app/main/default/objects/Case/fields/Catalog_listing_ID__c.field-meta.xml
<CustomField>
    <fullName>Catalog_listing_ID__c</fullName>
    <label>Catalog listing ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>