force-app/main/default/objects/Case/fields/Catalog_Market_place__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Market_place__c</fullName>
    <label>Catalog Market place</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>