force-app/main/default/objects/Case/fields/Categories_of_products__c.field-meta.xml
<CustomField>
    <fullName>Categories_of_products__c</fullName>
    <label>Categories of products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>