force-app/main/default/objects/Case/fields/Categories_sold__c.field-meta.xml
<CustomField>
    <fullName>Categories_sold__c</fullName>
    <label>Categories sold</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>