force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>IF( Smartphones__c =&quot;Go!&quot;, 1, 0) + IF( Tablets__c =&quot;Go!&quot;, 1, 0) + IF( Laptop_Macbook__c =&quot;Go!&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>