force-app/main/default/objects/Case/fields/Chargeback_Amount__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Amount__c</fullName>
    <label>Chargeback Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>