force-app/main/default/objects/Case/fields/Claim_Reason__c.field-meta.xml
<CustomField>
    <fullName>Claim_Reason__c</fullName>
    <label>Claim Reason</label>
    <type>TextArea</type>
</CustomField>