force-app/main/default/objects/Case/fields/Comment_if_refused__c.field-meta.xml
<CustomField>
    <fullName>Comment_if_refused__c</fullName>
    <label>Comment if refused</label>
    <type>TextArea</type>
</CustomField>