force-app/main/default/objects/Case/fields/Commercial_gesture__c.field-meta.xml
<CustomField>
    <fullName>Commercial_gesture__c</fullName>
    <inlineHelpText>To sell on Back Market, the seller undertakes to proactively offer commercial gestures to customers as stated in the Quality Charter when they fail to deliver on their promise (aesthetical condition discrepancy, missing accessory, late delivery, wrong color received).</inlineHelpText>
    <label>Commercial gesture</label>
    <type>TextArea</type>
</CustomField>