force-app/main/default/objects/Case/fields/Company_statute__c.field-meta.xml
<CustomField>
    <fullName>Company_statute__c</fullName>
    <label>Company statute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>