force-app/main/default/objects/Case/fields/Contact_customers__c.field-meta.xml
<CustomField>
    <fullName>Contact_customers__c</fullName>
    <inlineHelpText>According to our quality charter, what are your options for contacting a customer?</inlineHelpText>
    <label>Contact customers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>