force-app/main/default/objects/Case/fields/Contact_First_and_Last_name__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_and_Last_name__c</fullName>
    <label>Contact - First and Last name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>