force-app/main/default/objects/Case/fields/Contract_with_carrier__c.field-meta.xml
<CustomField>
    <fullName>Contract_with_carrier__c</fullName>
    <label>Contract with carrier</label>
    <type>TextArea</type>
</CustomField>