force-app/main/default/objects/Case/fields/Counter_offer__c.field-meta.xml
<CustomField>
    <fullName>Counter_offer__c</fullName>
    <inlineHelpText>La contreproposition (le fait de donner un nouveau prix au client) est pour vous :</inlineHelpText>
    <label>Counter-offer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>