force-app/main/default/objects/Case/fields/Counter_offer_Return__c.field-meta.xml
<CustomField>
    <fullName>Counter_offer_Return__c</fullName>
    <inlineHelpText>Selon la charte, de combien de temps maximum disposez-vous pour renvoyer le produit au client en cas de refus de contre-proposition ?</inlineHelpText>
    <label>Counter-offer - Return</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>