force-app/main/default/objects/Case/fields/Countries_with_BM__c.field-meta.xml
<CustomField>
    <fullName>Countries_with_BM__c</fullName>
    <label>Countries with BM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>