force-app/main/default/objects/Case/fields/Created_by_me__c.field-meta.xml
<CustomField>
    <fullName>Created_by_me__c</fullName>
    <formula>if ( CreatedById =  $User.Id , &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by me</label>
    <type>Text</type>
</CustomField>