force-app/main/default/objects/Case/fields/Crew_fluent_in__c.field-meta.xml
<CustomField>
    <fullName>Crew_fluent_in__c</fullName>
    <label>Crew fluent in</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>