force-app/main/default/objects/Case/fields/Date_First_Response__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Response__c</fullName>
    <label>Date First Response</label>
    <type>DateTime</type>
</CustomField>