force-app/main/default/objects/Case/fields/Dispute_the_condition__c.field-meta.xml
<CustomField>
    <fullName>Dispute_the_condition__c</fullName>
    <label>Dispute the condition</label>
    <length>1</length>
    <type>Text</type>
</CustomField>