force-app/main/default/objects/Case/fields/Doublette__c.field-meta.xml
<CustomField>
    <fullName>Doublette__c</fullName>
    <inlineHelpText>What are the action(s) possible in the event of a product returned for the second time?</inlineHelpText>
    <label>Doublette</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>