force-app/main/default/objects/Case/fields/employees__c.field-meta.xml
<CustomField>
    <fullName>employees__c</fullName>
    <label># employees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>