force-app/main/default/objects/Case/fields/Empty_parcel__c.field-meta.xml
<CustomField>
    <fullName>Empty_parcel__c</fullName>
    <inlineHelpText>Vous réceptionnez un colis vide. Que faites-vous ?</inlineHelpText>
    <label>Empty parcel</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>