force-app/main/default/objects/Case/fields/European_Address__c.field-meta.xml
<CustomField>
    <fullName>European_Address__c</fullName>
    <inlineHelpText>Have you registered your European return address in the Back Market Back Office ?</inlineHelpText>
    <label>European Return Address</label>
    <type>TextArea</type>
</CustomField>