force-app/main/default/objects/Case/fields/Faulty_KPIs_root_cause_identified__c.field-meta.xml
<CustomField>
    <fullName>Faulty_KPIs_root_cause_identified__c</fullName>
    <label>Faulty KPIs &amp; root cause identified</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>