force-app/main/default/objects/Case/fields/Grade_Laptop__c.field-meta.xml
<CustomField>
    <fullName>Grade_Laptop__c</fullName>
    <inlineHelpText>What is the aesthetic condition of this MacBook?</inlineHelpText>
    <label>Grade - Laptop</label>
    <type>TextArea</type>
</CustomField>