force-app/main/default/objects/Case/fields/Grade_Smartphone__c.field-meta.xml
<CustomField>
    <fullName>Grade_Smartphone__c</fullName>
    <inlineHelpText>What is the aesthetic condition of this smartphone?</inlineHelpText>
    <label>Grade - Smartphone</label>
    <type>TextArea</type>
</CustomField>