force-app/main/default/objects/Case/fields/Grade_Tablet__c.field-meta.xml
<CustomField>
    <fullName>Grade_Tablet__c</fullName>
    <inlineHelpText>What is the aesthetic condition of this tablet?</inlineHelpText>
    <label>Grade - Tablet</label>
    <type>TextArea</type>
</CustomField>