force-app/main/default/objects/Case/fields/Grading_system__c.field-meta.xml
<CustomField>
    <fullName>Grading_system__c</fullName>
    <inlineHelpText>To sell on Back Market, it is required that you accurately describe products’ aesthetic condition according to our grading system.</inlineHelpText>
    <label>Grading system</label>
    <type>TextArea</type>
</CustomField>