force-app/main/default/objects/Case/fields/Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Guarantee__c</fullName>
    <inlineHelpText>To sell on Back Market, it is required that you provide to buyers a commercial guarantee of at least 12 months accessories &amp; battery included as well as a right of withdrawal of 30 days. The right of withdrawal has to be extended at the year end period: for all orders made from the Monday of the BlackFriday week (e.g. Monday Nov 22nd 2021) until the end of the year (Dec 31st) the end of the withdrawal period is Jan 31st of the following year.</inlineHelpText>
    <label>Guarantee and Right of withdrawal</label>
    <type>TextArea</type>
</CustomField>