force-app/main/default/objects/Case/fields/Handled_by_Back_Care__c.field-meta.xml
<CustomField>
    <fullName>Handled_by_Back_Care__c</fullName>
    <label>Handled by Back Care ?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>