force-app/main/default/objects/Case/fields/Has_been_accepted_on__c.field-meta.xml
<CustomField>
    <fullName>Has_been_accepted_on__c</fullName>
    <label>Has been accepted on</label>
    <type>Date</type>
</CustomField>