force-app/main/default/objects/Case/fields/Has_been_created_on__c.field-meta.xml
<CustomField>
    <fullName>Has_been_created_on__c</fullName>
    <formula>DATEVALUE ( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has been created on</label>
    <type>Date</type>
</CustomField>