force-app/main/default/objects/Case/fields/Has_been_sent_to_feedback_on__c.field-meta.xml
<CustomField>
    <fullName>Has_been_sent_to_feedback_on__c</fullName>
    <label>Has been sent to feedback on</label>
    <type>Date</type>
</CustomField>