force-app/main/default/objects/Case/fields/Holidays__c.field-meta.xml
<CustomField>
    <fullName>Holidays__c</fullName>
    <label>Holidays</label>
    <type>TextArea</type>
</CustomField>