force-app/main/default/objects/Case/fields/Honor_all_live_listings__c.field-meta.xml
<CustomField>
    <fullName>Honor_all_live_listings__c</fullName>
    <label>Honor all live listings</label>
    <type>TextArea</type>
</CustomField>