force-app/main/default/objects/Case/fields/If_repair_exchange_delay_too_short__c.field-meta.xml
<CustomField>
    <fullName>If_repair_exchange_delay_too_short__c</fullName>
    <inlineHelpText>You answered &quot;no&quot; to the previous question. In this case, what are you able to offer the client?</inlineHelpText>
    <label>If repair/exchange delay too short</label>
    <type>TextArea</type>
</CustomField>