force-app/main/default/objects/Case/fields/Integrator_Mgt_software_1_used__c.field-meta.xml
<CustomField>
    <fullName>Integrator_Mgt_software_1_used__c</fullName>
    <label>Integrator, Mgt software #1 used</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>