force-app/main/default/objects/Case/fields/Integrator_Mgt_software_2_used__c.field-meta.xml
<CustomField>
    <fullName>Integrator_Mgt_software_2_used__c</fullName>
    <label>Integrator, Mgt software #2 used</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>