force-app/main/default/objects/Case/fields/Integrators__c.field-meta.xml
<CustomField>
    <fullName>Integrators__c</fullName>
    <label>Integrators</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integrators</valueSetName>
    </valueSet>
</CustomField>