force-app/main/default/objects/Case/fields/Interested_in_Buyback__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Buyback__c</fullName>
    <label>Interested in Buyback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>